refactor program deleting OldRole reference and directory. Fix problem with tax and resource tests.
