# app/Http/Requests/UpdateRoleRequest.php
@@ -1,33 +1,0 @@
-<?php
-
-declare (strict_types= 1);
-
-namespace App\Http\Requests;
-
-use Illuminate\Foundation\Http\FormRequest;
-use App\Rules\GithubIdRule;
-
-class UpdateRoleRequest extends FormRequest
-{
-    /**
-     * Determine if the user is authorized to make this request.
-     */
-    public function authorize(): bool
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
-     */
-    public function rules(): array
-    {
-        return [
-            'authorized_github_id' => new GithubIdRule(),
-            'github_id' => new GithubIdRule(),
-            'role' => ['required', 'string', 'in:superadmin,mentor,admin,student'],
-        ];
-    }
-}
